[gd_scene load_steps=49 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://player.png" type="Texture" id=2]
[ext_resource path="res://Country-village_asset_pack/2_Parallax background/background.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.7637, 16.077 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18.701, 17.2475 )

[sub_resource type="Animation" id=3]
length = 0.5
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03, 0.06, 0.09, 0.12, 0.16, 0.26, 0.36, 0.46, 0.56, 0.66, 0.76 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/SwordHit/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.17, 0.46 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=4]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 63, 64, 65, 66, 67, 68 ]
}

[sub_resource type="Animation" id=5]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 69, 70, 71, 72 ]
}

[sub_resource type="Animation" id=6]
length = 0.4
loop = true
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.12, 0.18, 0.28, 0.32, 0.36 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 76, 77, 78, 79, 80, 81, 82 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/DashAttack/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.18, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=7]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 73, 74, 75 ]
}

[sub_resource type="Animation" id=8]
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36 ]
}

[sub_resource type="Animation" id=9]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 46, 47, 48 ]
}

[sub_resource type="Animation" id=10]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 37, 38, 39, 40 ]
}

[sub_resource type="Animation" id=11]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=12]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 41, 42, 43 ]
}

[sub_resource type="Animation" id=13]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 41, 42, 43, 44, 45, 46, 47, 48 ]
}

[sub_resource type="Animation" id=14]
loop = true

[sub_resource type="Animation" id=15]
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 6, 7, 8, 9, 10, 11, 12, 13 ]
}

[sub_resource type="Animation" id=16]
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 84, 85, 86, 87, 88, 89, 90 ]
}

[sub_resource type="Animation" id=17]
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59 ]
}

[sub_resource type="Animation" id=18]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 60, 61, 62 ]
}

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 5.50124, 13.3769 )

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "Attack"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "Crouch"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "DashAttack"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "Fall"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "Jump"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "Run"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "Slide"

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=39]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachineTransition" id=41]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=42]

[sub_resource type="AnimationNodeStateMachineTransition" id=43]

[sub_resource type="AnimationNodeStateMachine" id=44]
states/Attack/node = SubResource( 20 )
states/Attack/position = Vector2( 769, 156 )
states/Crouch/node = SubResource( 21 )
states/Crouch/position = Vector2( 238, 156 )
states/DashAttack/node = SubResource( 22 )
states/DashAttack/position = Vector2( 514, -126 )
states/Fall/node = SubResource( 23 )
states/Fall/position = Vector2( 667, -1 )
states/Idle/node = SubResource( 24 )
states/Idle/position = Vector2( 499, 156 )
states/Jump/node = SubResource( 25 )
states/Jump/position = Vector2( 364, -1 )
states/Run/node = SubResource( 26 )
states/Run/position = Vector2( 499, 314 )
states/Slide/node = SubResource( 27 )
states/Slide/position = Vector2( 24, 156 )
transitions = [ "Idle", "Run", SubResource( 28 ), "Run", "Idle", SubResource( 29 ), "Idle", "Jump", SubResource( 30 ), "Jump", "Fall", SubResource( 31 ), "Fall", "Idle", SubResource( 32 ), "Idle", "Attack", SubResource( 33 ), "Run", "Attack", SubResource( 34 ), "Attack", "Idle", SubResource( 35 ), "Jump", "DashAttack", SubResource( 36 ), "Fall", "DashAttack", SubResource( 37 ), "DashAttack", "Fall", SubResource( 38 ), "DashAttack", "Jump", SubResource( 39 ), "Idle", "Crouch", SubResource( 40 ), "Crouch", "Idle", SubResource( 41 ), "Crouch", "Slide", SubResource( 42 ), "Slide", "Crouch", SubResource( 43 ) ]
start_node = "Idle"
graph_offset = Vector2( -455, -63 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=45]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 0, -150 )
current = true
process_mode = 0
smoothing_enabled = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 9.97584, -21.0178 )
texture = ExtResource( 2 )
vframes = 17
hframes = 6
region_rect = Rect2( 100, 100, 100, 23 )

[node name="SwordHit" type="Area2D" parent="Sprite"]
position = Vector2( -9.97584, 21.0178 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/SwordHit"]
position = Vector2( 27.0611, -22.9406 )
shape = SubResource( 1 )
disabled = true

[node name="DashAttack" type="Area2D" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/DashAttack"]
position = Vector2( 15.874, 0.992123 )
shape = SubResource( 2 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 3 )
anims/Crouch = SubResource( 4 )
anims/Dash = SubResource( 5 )
anims/DashAttack = SubResource( 6 )
anims/DashStop = SubResource( 7 )
anims/Death = SubResource( 8 )
anims/Fall = SubResource( 9 )
anims/HitStun = SubResource( 10 )
anims/Idle = SubResource( 11 )
anims/Jump = SubResource( 12 )
anims/JumpAndFall = SubResource( 13 )
anims/LadderClimb = SubResource( 14 )
anims/Run = SubResource( 15 )
anims/Slide = SubResource( 16 )
anims/WallHang = SubResource( 17 )
anims/WallSlide = SubResource( 18 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 1.97532, -13.3819 )
shape = SubResource( 19 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 44 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 45 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = -4

[node name="background" type="Sprite" parent="ParallaxBackground"]
scale = Vector2( 1.66769, 1.49609 )
texture = ExtResource( 3 )
centered = false
[connection signal="area_entered" from="Sprite/SwordHit" to="." method="_on_SwordHit_area_entered"]
[connection signal="area_entered" from="Sprite/DashAttack" to="." method="_on_DashAttack_area_entered"]
